--- a/style.css
+++ b/style.css
@@ -51,7 +51,12 @@ body {
 
 /* container */
 .section-2{
-    margin-top: 15%;
+    margin-top: 10%;
+    background-color: #a58ef7;
+    border-radius: 30% 70% 25% 75% / 84% 53% 47% 16%  ;
+}
+.section-3{
+    margin-top: 10%;
     background-color: #a58ef7;
     border-radius: 30% 70% 25% 75% / 84% 53% 47% 16%  ;
 }
@@ -139,6 +144,7 @@ body {
     /* text-shadow: 0 1px 7px rgba(0,0,0,0.6); */
 }
 
+
 /* Button cards */
 .container .btn-card{
     border-radius: 5px;
@@ -156,66 +162,9 @@ body {
     box-shadow: none;
     transform: translateY(4px);
 }
-/* footer */
-section .body-image-section-3 {
-    height: 100%;
-    margin-top: %;
-}
-footer {
-    background-color: black;
-    color: white;
-}
-.footer-section a{
-    color:white;
-    list-style: none;
-    text-decoration: none;
-}
-.footer-section a:hover {
-    border-bottom: 2px #B980AF solid;
-    transition: .10s;
-}
 
-
-/* Main Container and background image */
-
-/* .image-div {
-    position: relative;
-    max-width: 100%;
-    box-sizing: border-box;
-    margin: 0px ;
-    padding: 0px;
-    height: 100vh;
-    top: 0;
-    background-size: cover;
-    /* background-image: url("imagenes/Frame\ 6.png"); 
-    background-position: center;
+.card1, .card2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
-@media (min-width:600px) {
-    .body-image{width: 100%}
-    
-}
-@media (min-width:300px) {
-    .body-image{width: 100%}
-    .navbar{width: 100vw;}
-    
-}
- .container{
-    position: absolute;
-    width: 100vw;
-    
-} */
-
-/* Estilo para el contenedor principal 
- .image-div {
-    height: 100%; /* Establece la altura del contenedor al 100% de la altura de la ventana gráfica
-   
-  }
-  
-  
-  .body-image {
-    max-height: 100%; 
-    max-width: 100%; 
-    height: 100vh; 
-    width: 100vw; 
-  } */
-  
