--- a/color/color.css
+++ b/color/color.css
@@ -53,7 +53,7 @@ body {
 .title-1{
     font-size: 55px;
     background: -webkit-linear-gradient(rgb(250, 250, 38), rgb(255, 70, 70));
-    background-clip: text;    
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
       
 }
@@ -67,6 +67,7 @@ body {
 
 
 /* second section */
+.section{}
 .main-container-2{
     
     border-radius: 20rem 0px 30rem 0;
@@ -77,7 +78,8 @@ body {
 .title-2{
     font-size: 55px;
     background: -webkit-linear-gradient(rgb(238, 86, 36), rgb(237, 151, 66));
-    background-clip: text;    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .paragraph-2{
     color: white;
@@ -92,7 +94,8 @@ body {
 }.title-3{
     font-size: 55px;
     background: -webkit-linear-gradient(rgb(250, 250, 38), rgb(255, 70, 70));
-    background-clip: text;    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
       
 }
 .paragraph-3{
